--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
 <!-- start custom footer snippets -->
-<div><p>"Don't just follow your dreams"</p></div>
+<div><p style="font-size:16px;">"Don't just follow your dreams, follow your reality - Christopher Nolan"</p></div>
 
 <!-- end custom footer snippets -->
